--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
   "rules": {
     "no-restricted-syntax": [0],
     "no-mixed-operators": [0],
-    "no-underscore-dangle": [0]
+    "no-underscore-dangle": [0],
+    "arrow-parens": [2, "as-needed"]
   },
 
   "parserOptions": {
